missing file added

--- a/manifests/otel-collector.yaml
+++ b/manifests/otel-collector.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: opentelemetry-operator-system
 spec:
   mode: deployment
-  image: otel/opentelemetry-collector-contrib:0.89.0
+  image: public.ecr.aws/aws-observability/aws-otel-collector:latest
   # Using environment variables from ConfigMap created from .env file
   envFrom:
     - configMapRef:
